--- a/README
+++ b/README
@@ -1,14 +1,14 @@
 This is the source code for MethylModes, an R Shiny application for identifying multi-modal distributions in methylation at individual CpG sites. Users upload methylation data (in the form of a beta matrix) from a local source and can download results as a .csv file.
 
-To run this app, you need to install the latest versions of Shiny and several other dependencies. The most elegant way to do that is by using the pacman package, which conveniently handles package installation. Run the following code to install pacman and all MethylModes dependences:
+To run this app, you need to install the latest versions of Shiny, Bioconductor, and several other dependencies. The most elegant way to do that is by using the pacman package, which conveniently handles package installation. Run the following code to install pacman and all MethylModes dependences:
 
 
 # pacman gives us the function p_load
 if(!require("pacman")) {
   # require() attempts to load a package and returns TRUE or FALSE
   install.packages("pacman")
-  library(pacman)
 }
+library(pacman)
 p_load(
 # Shiny-specific
 shiny, shinyjs, shinybusy, shinycssloaders,
@@ -19,6 +19,22 @@ data.table, dplyr, ggplot2, plotly,
 # Parallelization
 foreach, iterators, parallelly, doParallel
 )
+
+# Install current version of Bioconductor
+if (!require("BiocManager", quietly = TRUE))
+    install.packages("BiocManager")
+BiocManager::install(version = "3.19") # requires R 4.4
+
+# Install any necessary Illumina array annotation packages 
+# (you probably won't need all of these)
+# 450k
+BiocManager::install("IlluminaHumanMethylation450kanno.ilmn12.hg19")
+
+# EPIC v1.0
+BiocManager::install("IlluminaHumanMethylationEPICanno.ilm10b4.hg19")
+
+# EPIC v2.0
+BiocManager::install("IlluminaHumanMethylationEPICv2anno.20a1.hg38")
 
 It's a good idea to restart R after installing new packages to ensure that they work properly.
 
